# serial-monitor

./: .gitignore  .nvimlog  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md
.github/scripts/: update-homebrew-formula.sh
.github/workflows/: ci.yml  release.yml
Formula/: serial-monitor.rb
crates/config/: Cargo.toml  PLAN.md
crates/config-derive/: Cargo.toml
crates/config-derive/src/: lib.rs
crates/config/src/: error.rs  lib.rs  schema.rs  traits.rs  value.rs
crates/serial-core/: Cargo.toml
crates/serial-core/src/: buffer.rs  chunking.rs  crash.rs  encoding.rs  error.rs  file_saver.rs  file_sender.rs  keep_awake.rs  lib.rs  port.rs  session.rs  settings.rs
crates/serial-core/src/buffer/: PLAN.md  chunk.rs  data_buffer.rs  encoding.rs  file_saver.rs  filter.rs  mod.rs  pattern.rs  search.rs
crates/serial-core/src/buffer/graph/: engine.rs  mod.rs  parser.rs
crates/serial-core/src/display/: PLAN.md  buffer.rs  chunk.rs  encoding.rs  filter.rs  mod.rs  pattern.rs  search.rs
crates/serial-core/src/graph/: data.rs  engine.rs  mod.rs  parser.rs
crates/serial-core/src/graph_v2/: engine.rs  parser.rs
crates/serial-core/src/search/: engine.rs  mod.rs  pattern.rs
crates/serial-core/src/ui/: config.rs  descriptions.rs  encoding.rs  mod.rs  serial_config.rs  size.rs  timestamp.rs  units.rs
crates/serial-core/src/ui/util/: config.rs  escape.rs  format.rs  mod.rs  text.rs
crates/serial-gui/: Cargo.toml
crates/serial-gui/src/: app.rs  main.rs  theme.rs  widget_options.rs
crates/serial-gui/src/view/: mod.rs  pre_connect.rs  traffic.rs
crates/serial-gui/src/view/graph/: chart.rs  config.rs  legend.rs  mod.rs  state.rs
crates/serial-gui/src/view/traffic/: config_panel.rs  data_view.rs  mod.rs  widgets.rs
crates/serial-test/: Cargo.toml
crates/serial-test/src/: main.rs
crates/serial-tui/: Cargo.toml
crates/serial-tui/src/: app.rs  clipboard.rs  command.rs  event.rs  keybind.rs  lib.rs  main.rs  settings.rs  theme.rs  ui.rs  wrap.rs
crates/serial-tui/src/app/: handlers.rs  mod.rs  state.rs  types.rs
crates/serial-tui/src/ui/: config_panel.rs  dialogs.rs  mod.rs  port_select.rs  settings.rs  traffic.rs
crates/serial-tui/src/view/: file_sender.rs  graph.rs  mod.rs  pre_connect.rs  traffic.rs
crates/serial-tui/src/widget/: completion_popup.rs  config_panel.rs  confirm_overlay.rs  connect_modal.rs  connection_panel.rs  help_overlay.rs  input_history.rs  loading_overlay.rs  mod.rs  path_editor.rs  port_list.rs  sessions_modal.rs  text_input.rs  toast.rs  util.rs
scripts/screenshots/: 01-traffic.sh  02-graph.sh  03-file-sender.sh  common.sh  patch-freeze-svg.py  validate-rendering.py
scripts/tmux/: capture-ansi  capture-text  send  start  stop
src/: app_state.rs  main.rs
src/serial_port/: thread.rs
