[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "process", "io-std", "fs"] }

# Random
rand = "0.9"

# Serial port
tokio-serial = "5.4"
serialport = "4.7"

# Error handling
thiserror = "2"

# TUI
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"

# Internal crates
serial-core = { path = "crates/serial-core" }
serial-tui = { path = "crates/serial-tui" }
