[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "process", "io-std", "fs", "signal"] }

# Random
rand = "0.9"

# Serial port
tokio-serial = "5.4"
serialport = "4.7"

# Error handling
thiserror = "2"

# TUI
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"

# Enum utilities
strum = { version = "0.26", features = ["derive"] }

# Builder pattern
bon = "3.8.1"
enum_dispatch = "0.3.13"

# Pattern matching
regex = "1"
memchr = "2.7.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Directories
dirs = "6"

# Date/time
chrono = "0.4"

# Keep awake (prevent system sleep)
keepawake = "0.6"

# Internal crates
serial-core = { path = "crates/serial-core" }
serial-tui = { path = "crates/serial-tui" }
