[package]
name = "serial-core"
description = "Frontend-agnostic serial monitor core library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-serial = { workspace = true }

thiserror = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }

# Configuration system
config = { path = "../config" }
