[package]
name = "serial-core"
description = "Frontend-agnostic serial monitor core library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-serial = { workspace = true }

regex = { workspace = true }
memchr = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
strum = { workspace = true }
bon = { workspace = true }
enum_dispatch = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

keepawake = { workspace = true }
unicode-width = { workspace = true }
