[package]
name = "serial-tui"
description = "TUI frontend for serial monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "serial-monitor"
path = "src/main.rs"

[dependencies]
serial-core = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
