[package]
name = "serial-tui"
description = "Terminal UI for serial monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serial-core = { workspace = true }

tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
unicode-width = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
